--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,15 @@
 }
 body{
     height: 100%;
+    overflow: hidden;
+    
 }
 /* ......navigation section..... */
 .navi{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 20vh;
+    height: 15vh;
 }
 .navi img{
     
@@ -30,6 +32,7 @@ body{
     gap: 50px;
     margin: 0 15px;
     justify-content: center;
+    cursor: pointer;
 
 }
 .list1 li:nth-child(1){
@@ -53,9 +56,13 @@ body{
     width: 110px;
     height: 25px;
     border: 1px solid;
-    border-radius: 4px;
+    border-radius: 3px;
+    cursor: pointer;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+    font-size: 0.88rem;
     }
-    /* ...main section... */
+    
     main{
         display: flex;
         position: relative;
@@ -125,6 +132,7 @@ body{
     text-transform: capitalize;
     border-radius: 7px;
     border: 1px solid;
+    cursor: pointer;
 }
 .bg {
     background-color: black;
@@ -133,6 +141,7 @@ body{
     border-radius: 5px;
     text-transform: capitalize;
     width: 100px;
+    cursor: pointer;
 
 }
 .h3{
