--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,12 @@ body{
     display: flex;
     justify-content: left;
     gap: 10px;
+    align-items: center;
 
 }
 .logoo img{
     
-    height: 20px;
+    height: 25px;
 
 
 }
